feat: support multiple rekor signatures for the checkpoint
